--- a/examples/BIMServer_test.html
+++ b/examples/BIMServer_test.html
@@ -151,7 +151,7 @@
     const username = "jmanzano@evoltia.com";
     const password = "test";
 
-    const poid = test;
+    const poid = 131073;
 
     //------------------------------------------------------------------------------------------------------------------
     // Create a Viewer,
