--- a/examples/BIMServer_loadYourModel.html
+++ b/examples/BIMServer_loadYourModel.html
@@ -871,10 +871,10 @@
         const passwordElement = document.getElementById("password");
         const poidElement = document.getElementById("poid");
 
-        const bimServerAddress = bimServerAddressElement.innerText || "http://localhost:8082";
-        const username = usernameElement.innerText || "kevin.flynn@en.com";
-        const password = passwordElement.innerText || "secretPassword";
-        const poid = parseInt(poidElement.innerText || 327681);
+        const bimServerAddress = bimServerAddressElement.innerText || "http://localhost:8080";
+        const username = usernameElement.innerText || "jmanzano@evoltia.com";
+        const password = passwordElement.innerText || "test";
+        const poid = parseInt(poidElement.innerText || 131073);
 
         //------------------------------------------------------------------------------------------------------------------
         // Create a BIMServerClient
