--- a/examples/BIMServer_test.html
+++ b/examples/BIMServer_test.html
@@ -146,7 +146,7 @@
     // BIMServer parameters for this example
     //------------------------------------------------------------------------------------------------------------------
 
-    const bimServerAddress = "http://localhost:8080/BIMserver";
+    const bimServerAddress = "http://localhost:8080/BIMserver/";
 
     const username = "jmanzano@evoltia.com";
     const password = "test";
